# conduit

./: .envrc  .gitignore  :  README.md  SPEC.md  \  obsidian.skill  pyproject.toml  sync.py
.claude/: ralph-loop.local.md  settings.local.json
dev/: SEARCH.PY  SKILL.py  TOOL.py  branch.py  branching_spec.md  chain_compose.md  con.py  error_design_spec.md  func.py  m.py  notes.md  search.py  tap_ui.py  ui_design_spec.md
dev/hf/: hugging_face_client.py
dev/multimodal/imagegen/: hf.py  main.py
dev/multimodal/tts/: factory.py  tts_chatTTS.py  tts_chatterbox.py  tts_elevenlabs.py
dev/research/: 10k.py  10k_companies.md  brave.py  exa_research.py  exa_search.py  exa_search_results.jsonl  openai_research.py  query_string.jinja2  research.py  research_company.py  research_response.md  retrieve.py
docs/: backlog.md  changelog.md  health_check.md
docs/_prompts/: api_reference.jinja2  building_a_simple_chatbot.jinja2  cookbook.jinja2  quickstart.jinja2
docs/plans/: 2026-03-05-citations-flag.md  2026-03-05-query-search-flag.md  2026-03-09-image-flag.md  2026-03-16-conduit-dataset-design.md  2026-03-16-conduit-dataset-plan.md  2026-04-01-audio-save-play-design.md  2026-04-01-audio-save-play-plan.md  image-flag.md
docs/plans/.claude/: ralph-loop.local.md
docs/skills/: architecture.md  mcp_and_skills.md
docs/specs/: llamacpp-server-integration.md
docs/superpowers/plans/: 2026-03-09-clipboard-image.md  2026-03-09-conduit-models-subcommand.md  2026-03-10-conduit-batch-subcommand.md  2026-03-10-document-edit-strategy.md  2026-04-02-modelspec-postgres-migration.md
evals/: STRATEGY.md  config.json  config_schema.json  dataset.py  eval.py  evals.py  generate_corpus.py  generate_gold_standard.py  loss_function_SPEC.md  models.py  persist.py  run.py
evals/.claude/: settings.local.json
evals/data/: models.py  schema.sql
evals/datasets/: generate_corpus.py  generate_gold_standard.py  load_datasets.py
evals/datasets/.claude/: settings.local.json
evals/loss/: eval.py  eval_run.py  loss.py  loss_function_SPEC.md  models.py  pseudocode.py
evals/tests/: conftest.py  test_dataset.py
evals_old/: map_reduce_prompt.jinja2  one_shot_prompt.jinja2
message/: messagestore.py
output/: Customer_Service_2026-03-31.json  Front-End_Web_Development_2026-03-31.json
src/Chain/: batch.py
src/Chain/cache/: cache.py
src/Chain/chain/: chain.py
src/Chain/chat/: chat.py
src/Chain/compose/: chain_compose.md  chain_compose.py
src/Chain/llm_decorator/: __init__.py  decorator.py
src/Chain/message/: imagemessage.py  messages.py  textmessage.py
src/Chain/model/: model.py  model_async.py
src/Chain/multimodal/: design_spec.md
src/Chain/odometer/: PersistentOdometer.py  TokenEvent.py
src/Chain/parser/: parser.py
src/Chain/progress/: display_mixins.py  handlers.py  tracker.py
src/Chain/prompt/: prompt.py  prompt_loader.py
src/Chain/request/: clientparams.py
src/Chain/result/: error.py  result.py
src/Chain/scripts/: chat_cli.py
src/conduit/: __init__.py  async_.py  batch.py  config.py  remote.py  skills.py  sync.py
src/conduit/.claude/: settings.local.json
src/conduit/_dev/: mocks.py
src/conduit/cache/: __init__.py  cache.py
src/conduit/chain/: asyncchain.py
src/conduit/chat/: __init__.py  app.py  branching_spec.md  chat.py  chat_class.py  command.py  command_dispatcher.py  command_handlers.py  engine.py  handlers.py  registry.py  status.py  ui_design_spec.md
src/conduit/cli/: args.json  cli.py  cli_class.py  cli_factory.py  config_loader.py  handlers.py  query_function.py
src/conduit/compose/: conduit_compose.py
src/conduit/conduit/: async_conduit.py  conduit_base.py  sync_conduit.py  tool_conduit.py
src/conduit/core/: engine.py
src/conduit/embeddings/: chroma_batch.py  embedding_model.py  embedding_models.json  generate_embeddings.py
src/conduit/examples/: __init__.py  notes.md  sample_models.py  sample_objects.py  sample_requests.py
src/conduit/llm_decorator/: decorator.py
src/conduit/logs/: logging_config.py
src/conduit/message/: __init__.py  audiomessage.py  convert_image.py  imagemessage.py  message.py  messages.py  messagestore.py  textmessage.py
src/conduit/middleware/: __init__.py  caching.py  context_manager.py  middleware.py  progress.py  protocol.py  reporting.py  telemetry.py
src/conduit/model/: model.py  model_async.py  model_base.py  model_client.py  model_remote.py  model_sync.py  remote_model.py
src/conduit/odometer/: ConversationOdometer.py  Odometer.py  OdometerRegistry.py  PersistentOdometer.py  SessionOdometer.py  TokenEvent.py  design_spec.md
src/conduit/parser/: parser.py
src/conduit/progress/: __init__.py  display_mixins.py  handlers.py  tracker.py  (+2 more)
tests/: aud.py  conftest.py  factories.py  history.json  rem.py  response_metadata.py  test_clients.py  test_history.jsonl.json  test_ms.py  test_perplexity.py  test_session_odometer.py  test_tokens.py  test_verbose.py
tests/chat/: test_chat.py  test_chat_app.py
tests/cli/: test_audio_command.py  test_audio_content.py  test_batch_commands.py  test_batch_handlers.py  test_batch_wiring.py  test_citations_e2e.py  test_clipboard_image.py  test_handle_citations.py  test_image_command.py  test_models_commands.py  test_printer.py  test_query_function.py
tests/compose/: chain-compose-conditional-logic.json  chain-compose-parallel.json  chain-compose-simple.json  chain-compose-structured-output.json  chain-compose-two-step.json  pydantic_classes.py  simple.py
tests/fixtures/: __init__.py  sample_objects.py  sample_requests.py
tests/old/: test_display.py  test_message_store.py  test_model.py  test_ms.py  test_openai.py
tests/regression/: notes.md  test_audio.py  test_cache.py  test_chain.py  test_conduit.py  test_display.py  test_image.py  test_local.py  test_logging.py  test_message_store.py  test_model.py  test_request.py  test_serialization.py
tests/scripts/: test_update_ollama_list.py
tests/storage/: test_db_manager.py  test_modelspec_repository.py
tests/stream/: fixtures.py  test_stream.py
tests/unit/: test_conduit_sync.py  test_ollama_client.py
(+440 files in other folders)
