[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conduit"
version = "2.0.0"
description = "A lightweight, unified framework for building LLM applications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core dependencies
    "pydantic",
    "jinja2",
    "rich",
    "tiktoken",
    "instructor[perplexity]",
    "tinydb",
    "python-dotenv",
    # LLM Provider SDKs
    "openai",
    "anthropic",
    "google-generativeai",
    "ollama",
    # File process
    "pydub",
    "pillow",
    "soundfile",
    "markitdown[all]",
    # Web/HTTP
    "headwater_api",
    "headwater_client",
    "siphon_api",
    # Dev tools
    "ruff>=0.12.4",
    "ty>=0.0.1a15",
    # database
    "dbclients",
    "xdg-base-dirs>=6.0.2",
    "prompt-toolkit>=3.0.52",
    "transformers>=4.57.1",
    "sentencepiece>=0.2.1",
    "rapidfuzz>=3.14.3",
    "pyperclip>=1.11.0",
    "pytest-asyncio>=1.2.0",
    "markdownify>=1.2.2",
    "readabilipy>=0.3.0",
    "pathspec>=0.12.1",
    "pyyaml>=6.0.3",
    "asyncpg>=0.31.0",
    "datasets>=4.4.2",
    "semchunk>=3.2.5",
    "curl-cffi>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff>=0.12.4",
]

# ── Hatchling (build) ──────────────────────────────────────────────────────────
# Point Hatchling at the src/ package; this is the critical bit for src-layout.
[tool.hatch.build.targets.wheel]
packages = ["src/conduit"]
sources = ["src"]
include = ["src/conduit/py.typed"]

# If you ship non-.py files inside the package (configs, prompts, assets),
# list them so they’re included in wheels and sdists.
[tool.hatch.build]
include = [
  "src/twig/**/*.txt",
  "src/twig/**/*.md",
  "src/twig/**/*.json",
  "src/twig/**/*.yaml",
  "src/twig/**/*.yml",
  "src/twig/**/*.ini",
  "src/twig/**/*.jinja*",
  "src/twig/assets/**",
]

[tool.hatch.build.targets.sdist]
include = ["src/**", "README.*", "LICENSE*", "*.json"]

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
addopts = "-v -s --tb=short --no-header --showlocals --pdb -x"
log_cli = true
log_cli_level = "INFO"

# ── Ruff ───────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py312"  # align with requires-python

[tool.ruff.lint]
select = [
    "F", "E",
    "UP",
    "SIM",
    "ARG",
    "B",
    "RUF",
    "S102", "S103", "S108",
    "PERF",
    "FBT003",
]
ignore = [
    "SIM118",
    "ARG001", "ARG002",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "FBT"]
"scripts/**/*.py" = ["ARG", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["twig"]
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.uv.workspace]
members = [
    ".",
]

# ── uv sources (local/editable deps) ───────────────────────────────────────────
[tool.uv.sources]
dbclients = { path = "../dbclients-project", editable = true }
headwater_api = { path = "../headwater/headwater-api", editable = true }
headwater_client = { path = "../headwater/headwater-client", editable = true }
siphon_api = { path = "../siphon/siphon-api", editable = true }

[project.scripts]
chat = "conduit.apps.scripts.chat_cli:main"
imagegen = "conduit.apps.scripts.imagegen_cli:main"
models = "conduit.apps.scripts.models_cli:main"
tokens = "conduit.apps.scripts.tokens_cli:main"
update = "conduit.apps.scripts.update_modelstore:main"
update_ollama = "conduit.apps.scripts.update_ollama_list:main"
tokenize="conduit.apps.scripts.tokenize_cli:main"
conduit = "conduit.apps.scripts.conduit_cli:main"
ask = "conduit.apps.scripts.conduit_cli:query_entrypoint"
conduit_cache = "conduit.apps.scripts.cache_cli:main"
